# devin-dcc

./: README.md  codebook.toml  cspell.json  pyproject.toml
.github/actions/setup/: action.yml
.github/workflows/: ci.yml
src/devin/: __init__.py  constants.py  util.py
src/devin/cli/: base.py  blender.py  cleanup.py  devin.py  maya.py  mobu.py
src/devin/data/blender_scripts/startup/: __init__.py  bootstrap.py
src/devin/data/maya_scripts/startup/: userSetup.py
src/devin/data/mobu_scripts/startup/: __init__.py  bootstrap.py
src/devin/dcc/: __init__.py  blender.py  maya.py  mobu.py
src/devin_dcc/: __init__.py  constants.py  util.py
src/devin_dcc/cli/: __init__.py  base.py  blender.py  devin.py  maya.py  mobu.py
src/devin_dcc/data/blender_scripts/startup/: bootstrap.py
src/devin_dcc/data/maya_scripts/startup/: __init__.py
src/devin_dcc/data/mobu_scripts/startup/: bootstrap.py
tests/: __init__.py  conftest.py
tests/cli/: __init__.py  test_blender.py  test_maya.py  test_mobu.py
tests/dcc/: __init__.py  test_blender.py  test_maya.py
