[project]
name = "devin-dcc"
version = "0.0.1"
description = "CLI app for launching DCC applications."
readme = "README.md"
authors = [
    { name = "Henrik Wilhelmsen", email = "contact@henrikwilhelmsen.com" },
]
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.10.5",
    "pydantic-settings>=2.7.1",
]
license = "MPL-2.0"
license-files = ["LICENSE"]
keywords = ["CLI", "DCC", "Motionbuilder", "Blender", "Maya"]
classifiers = [
    "Private :: Do Not Upload",
    "Development Status :: 2 - Pre-Alpha",
    "Framework :: Pydantic",
]

[project.scripts]
devin = "devin:main"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.build]
includes = ["src"]
package-dir = "src"
source-includes = ["tests"]


[tool.ruff]
line-length = 88
src = ["src", "blender_scripts", "mobu_scripts"]
target-version = "py310"

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "FIX002", # Leave TODO's
    "TD002",  # Missing author in TODO
    "TD003",  # Missing issue link in TODO
    "S101",   # Ignore assert use (pytest)
]
per-file-ignores = { "tests/*" = [
    "ARG001", # Unused argument (pytest fixtures)
    "S101",   # Assert usage
] }

pydocstyle.convention = "google"

[tool.basedpyright]
include = ["src"]
reportAny = false

[dependency-groups]
dev = [
    "debugpy>=1.8.12",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.5",
    "pyinstaller>=6.11.1",
]
